--- a/client/login.html
+++ b/client/login.html
@@ -11,30 +11,41 @@
 </head>
 
 <body class="client-login-page">
-  
+
     <a href="../index.html" class="logo-link">
-    <img src="../assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
-  </a>
+        <img src="../assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
+    </a>
 
-  <div class="login-container">
-    <h1 class="login-title">Area Clienti</h1>
-    <p class="login-subtitle">Inserisci il tuo numero di telefono per accedere</p>
+    <div class="login-container">
+        <h1 class="login-title">Area Clienti</h1>
+        <p class="login-subtitle">Inserisci il tuo numero di telefono per accedere</p>
 
-    <div id="step-phone" class="login-card active">
-      <input type="tel" id="phoneInput" placeholder="+39 333 1234567" class="login-input" />
-      <button id="sendOtpBtn" class="login-btn">Invia codice</button>
+        <div id="step-phone" class="login-card active">
+            <input type="tel" id="phoneInput" placeholder="+39 333 1234567" class="login-input" />
+            <button id="sendOtpBtn" class="login-btn">Invia codice</button>
+        </div>
+
+        <div id="step-otp" class="login-card">
+            <p class="otp-info">Il tuo codice è: <span id="otpDisplay" class="otp-code"></span></p>
+            <input type="text" id="otpInput" placeholder="Inserisci codice" class="login-input" />
+            <button id="verifyOtpBtn" class="login-btn">Verifica</button>
+            <button id="backBtn" class="login-btn-secondary">← Indietro</button>
+        </div>
+
     </div>
-
-    <div id="step-otp" class="login-card">
-      <p class="otp-info">Il tuo codice è: <span id="otpDisplay" class="otp-code"></span></p>
-      <input type="text" id="otpInput" placeholder="Inserisci codice" class="login-input" />
-      <button id="verifyOtpBtn" class="login-btn">Verifica</button>
-      <button id="backBtn" class="login-btn-secondary">← Indietro</button>
+    <!-- Modal globale -->
+    <div class="app-modal-overlay" id="appModal">
+        <div class="app-modal">
+            <h2 class="app-modal-title" id="appModalTitle">Avviso</h2>
+            <p class="app-modal-message" id="appModalMessage"></p>
+            <div class="app-modal-actions">
+                <button type="button" class="btn-secondary" id="appModalCancel">Annulla</button>
+                <button type="button" class="btn-primary" id="appModalOk">OK</button>
+            </div>
+        </div>
     </div>
-
-  </div>
-
-  <script src="../scripts/storage.js"></script>
-  <script src="client.js"></script>
+    <script src="../scripts/storage.js"></script>
+    <script src="../scripts/ui.js"></script> 
+    <script src="client.js"></script>
 </body>
 </html>
