--- a/barber/login.html
+++ b/barber/login.html
@@ -11,24 +11,35 @@
 </head>
 
 <body class="barber-login-page">
-  
+
     <a href="../index.html" class="logo-link">
-    <img src="../assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
-  </a>
+        <img src="../assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
+    </a>
 
-  <div class="login-container">
-    <h1 class="login-title">Area Barbiere</h1>
-    <p class="login-subtitle">Inserisci la password per accedere</p>
+    <div class="login-container">
+        <h1 class="login-title">Area Barbiere</h1>
+        <p class="login-subtitle">Inserisci la password per accedere</p>
 
-    <div class="login-card">
-      <input type="password" id="passwordInput" placeholder="Password" class="login-input" />
-      <button id="loginBtn" class="login-btn">Accedi</button>
-      <p class="login-note" id="firstTimeNote" style="display:none;">Prima volta? Imposta una password.</p>
+        <div class="login-card">
+            <input type="password" id="passwordInput" placeholder="Password" class="login-input" />
+            <button id="loginBtn" class="login-btn">Accedi</button>
+            <p class="login-note" id="firstTimeNote" style="display:none;">Prima volta? Imposta una password.</p>
+        </div>
+
     </div>
-
-  </div>
-
+    <!-- Modal globale -->
+    <div class="app-modal-overlay" id="appModal">
+        <div class="app-modal">
+            <h2 class="app-modal-title" id="appModalTitle">Avviso</h2>
+            <p class="app-modal-message" id="appModalMessage"></p>
+            <div class="app-modal-actions">
+                <button type="button" class="btn-secondary" id="appModalCancel">Annulla</button>
+                <button type="button" class="btn-primary" id="appModalOk">OK</button>
+            </div>
+        </div>
+    </div>
   <script src="../scripts/storage.js"></script>
-  <script src="barber.js"></script>
+<script src="../scripts/ui.js"></script> 
+<script src="barber.js"></script>
 </body>
 </html>
