--- a/index.html
+++ b/index.html
@@ -12,33 +12,44 @@
 </head>
 
 <body>
-  <header class="main-header">
-    <a href="index.html" class="logo-link">
-      <img src="assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
-    </a>
-  </header>
+    <header class="main-header">
+        <a href="index.html" class="logo-link">
+            <img src="assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
+        </a>
+    </header>
 
-  <main class="home-container">
-    <h1 class="welcome-title">Prenota il tuo taglio con stile</h1>
-    <p class="subtitle">Benvenuto nel sistema di prenotazione del tuo barbershop di fiducia</p>
+    <main class="home-container">
+        <h1 class="welcome-title">Prenota il tuo taglio con stile</h1>
+        <p class="subtitle">Benvenuto nel sistema di prenotazione del tuo barbershop di fiducia</p>
 
-    <div class="role-selection">
-      <a href="client/login.html" class="role-card client">
-        <h2>Cliente</h2>
-        <p>Prenota un appuntamento</p>
-      </a>
+        <div class="role-selection">
+            <a href="client/login.html" class="role-card client">
+                <h2>Cliente</h2>
+                <p>Prenota un appuntamento</p>
+            </a>
 
-      <a href="barber/login.html" class="role-card barber">
-        <h2>Barbiere</h2>
-        <p>Gestisci appuntamenti</p>
-      </a>
+            <a href="barber/login.html" class="role-card barber">
+                <h2>Barbiere</h2>
+                <p>Gestisci appuntamenti</p>
+            </a>
+        </div>
+    </main>
+
+    <footer class="main-footer">
+        <p>© 2025 BarberBook - All rights reserved</p>
+    </footer>
+    <!-- Modal globale -->
+    <div class="app-modal-overlay" id="appModal">
+        <div class="app-modal">
+            <h2 class="app-modal-title" id="appModalTitle">Avviso</h2>
+            <p class="app-modal-message" id="appModalMessage"></p>
+            <div class="app-modal-actions">
+                <button type="button" class="btn-secondary" id="appModalCancel">Annulla</button>
+                <button type="button" class="btn-primary" id="appModalOk">OK</button>
+            </div>
+        </div>
     </div>
-  </main>
 
-  <footer class="main-footer">
-    <p>© 2025 BarberBook - All rights reserved</p>
-  </footer>
-
-  <script src="scripts/ui.js"></script>
+    <script src="scripts/ui.js"></script>
 </body>
 </html>
