--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="main-header">
         <a href="index.html" class="logo-link">
-            <img src="assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
+            <img src="assets/img/logo.png" alt="BarberBook" class="site-logo" />
         </a>
     </header>
 
