--- a/barber/login.html
+++ b/barber/login.html
@@ -11,35 +11,42 @@
 </head>
 
 <body class="barber-login-page">
+  <a href="../index.html" class="logo-link">
+    <img src="../assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
+  </a>
 
-    <a href="../index.html" class="logo-link">
-        <img src="../assets/img/logo.png" alt="BarberBook Logo" class="site-logo" />
-    </a>
+  <div class="login-container">
+    <h1 class="login-title">Area Barbiere</h1>
+    <p class="login-subtitle">Inserisci la tua email per ricevere il link di accesso.</p>
 
-    <div class="login-container">
-        <h1 class="login-title">Area Barbiere</h1>
-        <p class="login-subtitle">Inserisci la password per accedere</p>
-
-        <div class="login-card">
-            <input type="password" id="passwordInput" placeholder="Password" class="login-input" />
-            <button id="loginBtn" class="login-btn">Accedi</button>
-            <p class="login-note" id="firstTimeNote" style="display:none;">Prima volta? Imposta una password.</p>
-        </div>
-
+    <div class="login-card">
+      <input
+        type="email"
+        id="barberEmailInput"
+        placeholder="barber@example.com"
+        class="login-input"
+      />
+      <button id="barberLoginBtn" class="login-btn">Invia link di accesso</button>
+      <p class="login-note">
+        Usa l'email configurata come barbiere.
+      </p>
     </div>
-    <!-- Modal globale -->
-    <div class="app-modal-overlay" id="appModal">
-        <div class="app-modal">
-            <h2 class="app-modal-title" id="appModalTitle">Avviso</h2>
-            <p class="app-modal-message" id="appModalMessage"></p>
-            <div class="app-modal-actions">
-                <button type="button" class="btn-secondary" id="appModalCancel">Annulla</button>
-                <button type="button" class="btn-primary" id="appModalOk">OK</button>
-            </div>
-        </div>
+  </div>
+
+  <!-- Modal globale (se non già presente) -->
+  <div class="app-modal-overlay" id="appModal">
+    <div class="app-modal">
+      <h2 class="app-modal-title" id="appModalTitle">Avviso</h2>
+      <p class="app-modal-message" id="appModalMessage"></p>
+      <div class="app-modal-actions">
+        <button type="button" class="btn-secondary" id="appModalCancel">Annulla</button>
+        <button type="button" class="btn-primary" id="appModalOk">OK</button>
+      </div>
     </div>
-  <script src="../scripts/storage.js"></script>
-<script src="../scripts/ui.js"></script> 
-<script src="barber.js"></script>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script src="../scripts/ui.js"></script>
+  <script src="barber.js"></script>
 </body>
 </html>
