--- a/client/login.html
+++ b/client/login.html
@@ -5,14 +5,14 @@
   <title>Login Cliente - BeshBarber</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="../assets/css/client.css">
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="BeshBooking/assets/css/client.css">
+  <link rel="stylesheet" href="BeshBooking/assets/css/style.css">
 </head>
 
 <body class="client-login-page">
 
   <a href="../index.html" class="logo-link">
-    <img src="../assets/img/logo.png" alt="BarberBook Logo" class="site-logo">
+    <img src="BeshBooking/assets/img/logo.png" alt="BarberBook Logo" class="site-logo">
   </a>
 
   <div class="login-container">
@@ -51,8 +51,8 @@
 
   <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-  <script src="../scripts/ui.js"></script>
-  <script src="client.js"></script>
+  <script src="BeshBooking/scripts/ui.js"></script>
+  <script src="BeshBooking/client.js"></script>
 
 </body>
 </html>
