--- a/client/login.html
+++ b/client/login.html
@@ -5,14 +5,14 @@
   <title>Login Cliente - BeshBarber</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="BeshBooking/assets/css/client.css">
-  <link rel="stylesheet" href="BeshBooking/assets/css/style.css">
+  <link rel="stylesheet" href="/BeshBooking/assets/css/client.css">
+  <link rel="stylesheet" href="/BeshBooking/assets/css/style.css">
 </head>
 
 <body class="client-login-page">
 
-  <a href="../index.html" class="logo-link">
-    <img src="BeshBooking/assets/img/logo.png" alt="BarberBook Logo" class="site-logo">
+  <a href="/BeshBooking/index.html" class="logo-link">
+    <img src="/BeshBooking/assets/img/logo.png" alt="BarberBook Logo" class="site-logo">
   </a>
 
   <div class="login-container">
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <!-- Modal globale (da ui.js) -->
+  <!-- Modal globale -->
   <div class="app-modal-overlay" id="appModal">
     <div class="app-modal">
       <h2 class="app-modal-title" id="appModalTitle">Avviso</h2>
@@ -51,8 +51,8 @@
 
   <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-  <script src="BeshBooking/scripts/ui.js"></script>
-  <script src="BeshBooking/client.js"></script>
+  <script src="/BeshBooking/scripts/ui.js"></script>
+  <script src="/BeshBooking/client/client.js"></script>
 
 </body>
 </html>
