--- a/client/login.html
+++ b/client/login.html
@@ -5,59 +5,58 @@
   <title>Login Cliente - BeshBarber</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/BeshBooking/assets/css/client.css">
-  <link rel="stylesheet" href="/BeshBooking/assets/css/style.css">
+  <!-- Fonts e CSS globali -->
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/client.css">
 </head>
 
 <body class="client-login-page">
 
-  <!-- HEADER CON LOGO -->
-  <header class="login-header">
-    <a href="/BeshBooking/index.html" class="logo-link">
-      <img src="/BeshBooking/assets/img/logo.png" alt="Besh Barber Logo" class="site-logo-login">
-    </a>
-  </header>
+  <!-- LOGO CENTRALE COME BARBER LOGIN -->
+  <a href="../index.html" class="logo-link">
+    <img src="../assets/img/logo.png" alt="BeshBarber Logo" class="site-logo">
+  </a>
 
-  <!-- SEZIONE LOGIN -->
-  <section class="login-main">
+  <div class="login-container">
     <h1 class="login-title">Area Clienti</h1>
-    <p class="login-subtitle">
-      Accedi con la tua email. Ti invieremo un link di accesso.
-    </p>
+    <p class="login-subtitle">Accedi con la tua email. Ti invieremo un link di accesso.</p>
 
-    <div class="login-card">
+    <div class="login-card active">
       <input 
-        id="emailInput" 
         type="email" 
-        class="login-input"
-        placeholder="la-tua-email@example.com">
-      
-      <button id="sendLoginLinkBtn" class="btn-full-black">
+        id="emailInput" 
+        class="login-input" 
+        placeholder="la-tua-email@example.com"
+      >
+
+      <button id="sendLoginLinkBtn" class="login-btn">
         Invia link di accesso
       </button>
 
       <p class="login-note">
-        Login senza password. Metodo sicuro e veloce.
+        Nessuna password necessaria. Accesso sicuro via email.
       </p>
     </div>
-  </section>
+  </div>
 
   <!-- MODAL -->
   <div class="app-modal-overlay" id="appModal">
     <div class="app-modal">
-      <h2 id="appModalTitle"></h2>
-      <p id="appModalMessage"></p>
+      <h2 class="app-modal-title" id="appModalTitle">Avviso</h2>
+      <p class="app-modal-message" id="appModalMessage"></p>
       <div class="app-modal-actions">
-        <button id="appModalCancel" class="btn-secondary">Annulla</button>
-        <button id="appModalOk" class="btn-primary">OK</button>
+        <button class="btn-secondary" id="appModalCancel">Annulla</button>
+        <button class="btn-primary" id="appModalOk">OK</button>
       </div>
     </div>
   </div>
 
   <!-- SCRIPTS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-  <script src="/BeshBooking/scripts/ui.js"></script>
-  <script src="/BeshBooking/client/client.js"></script>
+  <script src="../scripts/ui.js"></script>
+  <script src="client.js"></script>
 
 </body>
 </html>
