--- a/client/create-password.html
+++ b/client/create-password.html
@@ -40,7 +40,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
   <script src="../scripts/ui.js"></script>
-  <script src="create-password.js"></script>
+  <script src="../scripts/create-password.js"></script>
 
 </body>
 </html>
