Fix Supabase SDK

--- a/barber/login-password.html
+++ b/barber/login-password.html
@@ -27,8 +27,11 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script src="../scripts/supabase-client.js"></script>
   <script src="../scripts/ui.js"></script>
   <script src="barber-auth.js"></script>
 </body>
 </html>
+
+
