--- a/client/login-password.html
+++ b/client/login-password.html
@@ -27,7 +27,8 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script src="../scripts/supabase-client.js"></script>
   <script src="../scripts/ui.js"></script>
   <script src="client-auth.js"></script>
 </body>
