--- a/barber/create-password.html
+++ b/barber/create-password.html
@@ -26,8 +26,8 @@
       <button id="setPwdBtn" class="login-btn">Salva Password</button>
     </div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script src="../scripts/supabase-client.js"></script>
   <script src="../scripts/ui.js"></script>
   <script src="create-password.js"></script>
 </body>
