--- a/barber/dashboard.html
+++ b/barber/dashboard.html
@@ -75,7 +75,8 @@
         </div>
     </div>
 
- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+<script src="../scripts/supabase-client.js"></script>
 <script src="../scripts/ui.js"></script>
 <script src="barber.js"></script>
 
