--- a/client/booking.html
+++ b/client/booking.html
@@ -62,7 +62,8 @@
   </div>
 
   <!-- SCRIPTS -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script src="../scripts/supabase-client.js"></script>
   <script src="../scripts/ui.js"></script>
   <script src="client.js"></script>
 
